2022-10-30T16:31:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356218377 # 568
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 377 590 / 394 621
* notice: next accum: outdated-unq outdated-all / unq all: 378 592 / 394 622
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-16] / []

2022-10-30T08:28:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354739201 # 567
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 377 590 / 393 621
* notice: next accum: outdated-unq outdated-all / unq all: 377 590 / 394 621
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-16 2022-10-30]

2022-10-29T16:31:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3352152012 # 565
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 376 589 / 392 620
* notice: next accum: outdated-unq outdated-all / unq all: 377 590 / 393 621
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-15] / [2022-10-29]

2022-10-29T02:05:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349664131 # 563
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 375 586 / 392 617
* notice: next accum: outdated-unq outdated-all / unq all: 376 589 / 392 620
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-14] / [2022-10-28]

2022-10-28T16:31:44Z: