@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-30T16:31:50Z",
+  "timestamp" : "2022-10-31T02:28:00Z",
   "count_outdated" : 592,
   "uniques_outdated" : 378,
-  "count" : 622,
-  "uniques" : 394,
+  "count" : 623,
+  "uniques" : 395,
   "clones" : [
     {
       "timestamp": "2022-10-17T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
