@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 3,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
