@@ -1,3 +1,11 @@
+2022-10-31T02:28:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3358118987 # 569
+* notice: last 14d: unq all: 3 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 378 592 / 394 622
+* notice: next accum: outdated-unq outdated-all / unq all: 378 592 / 395 623
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-31]
+
 2022-10-30T16:31:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356218377 # 568
 * notice: last 14d: unq all: 3 30
